welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: value lenght is not a member of Array[Int]
  for (compteur <- 1 to nums.lenght-1){
                             ^